--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,23 @@ html {
 }
 
 body {
-  
+  display: inline-block;
+  font-family: sans-serif;
+  margin: 0;
+}
+
+section {
+  background-color: #e2e2e2;
+}
+
+.img-flex {
+  width: 100%;
 }
 
 .btn {
   border-radius: 4px;
   background-color: #555;
   color: #fff;
-  padding: 0.8em;
+  padding: 0.5em 0.75em;
   text-decoration: none;
 }
