--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,8 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  font-size: 100%;
+  line-height: 1.3;
 }
 
 *, *::before, *::after {
@@ -24,16 +26,79 @@ body {
 
 section {
   background-color: #e2e2e2;
+vertical-align: middle;
+  margin-top: -1.3em;
+}
+
+h1 {
+  padding: 1em;
+}
+
+strong {
+  padding: 1em;
+  margin-bottom: -2em;
+}
+
+p {
+  padding: 1em;
+  margin-top: -1em;
+}
+
+div {
+  text-align: left;
+  vertical-align: middle;
 }
 
 .img-flex {
   width: 100%;
+  display: block;
+  margin-top: 1em;
+}
+
+a {
+  text-align: center;
+  border-radius: 4px;
+  background-color: #555;
+
 }
 
 .btn {
-  border-radius: 4px;
-  background-color: #555;
   color: #fff;
   padding: 0.5em 0.75em;
   text-decoration: none;
+}
+
+.btn:hover {
+  background-color: #000;
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  h1 {
+    margin: 0;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+    line-height: 1.5;
+  }
+
 }
